--- a/.gitignore
+++ b/.gitignore
@@ -181,3 +181,7 @@ cmake-build-*
 
 #Python
 __pycache__
+Marlin/Ender 5 defaults/_Bootscreen.h
+Marlin/Ender 5 defaults/_Statusscreen.h
+Marlin/Ender 5 defaults/Configuration.h
+Marlin/Ender 5 defaults/Configuration_adv.h
